# GemAI

./: .config.toml.swp  .gitignore  README.md  config.toml  feature_importance.csv  leaderboard.csv  load_mappings.py  main.py  pyproject.toml  test.py  train.py  training_history.pkl  utils.py
Configs/: config.toml
Data/: clean_ds.pkl
Data/processed/: feature_metadata.pkl  scaler.pkl  test.parquet  train.parquet
Logs/Autogluon/: leaderboard.csv  leaderboard_parallel.csv  learner.pkl  metadata.json
Logs/Autogluon/utils/attr/CatBoost/: y_pred_proba_val.pkl
Logs/Autogluon/utils/attr/ExtraTreesMSE/: y_pred_proba_val.pkl
Logs/Autogluon/utils/attr/LightGBM/: y_pred_proba_val.pkl
Logs/Autogluon/utils/attr/LightGBMXT/: y_pred_proba_val.pkl
Logs/Autogluon/utils/attr/RandomForestMSE/: y_pred_proba_val.pkl
Logs/Autogluon/utils/data/: X.pkl  X_val.pkl  y.pkl  y_val.pkl
Logs/Tabnet/: cat_mappings.pkl
app/: error_handler.py  index.html  main.py  model_service.py  schemas.py  style.css
app/api/: endpoints.py
app/core/: model_manager.py
app/services/: prediction_service.py
app/static/: script.js  style.css
app/templates/: index.html  info.html
configs/: config.toml
data/processed/: clean_ds.plk
models/: best_params.pkl  encoder.pkl  scaler.pkl
notebooks/: EDA.ipynb
src/: config.py  infer.py  loader.py  preprocess.py  train.py  trainer.py  tune.py  tuner.py  utils.py
src/GemAI/: config.py  data.py  main.py  utils.py
src/GemAI/models/: autogluon.py  tabnet.py
tests/: test_api.py  test_loader.py
