[project]
name = "gemai"
version = "1.1.0"
description = "A project to evaluate TabNet and other models for diamond price forecasting."
authors = [{name = "soot-bit"}]
requires-python = ">=3.11"
license = {text = "MIT"}

# Dependencies will be managed here by uv
dependencies = [
    "autogluon>=1.4.0",
    "black>=25.12.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pytorch-tabnet>=4.1.0",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
    "tomli>=2.0.1",
]

[tool.setuptools]
packages = {find = { where = ["src"]}} 

[project.scripts]
gemai = "GemAI.main:main"

[tool.uv]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=8.0.0",
    "httpx>=0.26.0",
]
# This section can be used for uv-specific configurations if needed
